<resources>
    <string name="app_name">timetomat</string>
    <string name="text_permissions">Пожалуйста, дайте необходимые разрешения для работы приложения. Без данных разрешений оно работать не сможет.</string>
    <string name="permission_overlay_button">разрешить показывать поверх всех окон</string>
    <string name="permission_file_button">разрешить работу с файлами</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="work_complete">Время работы закончилось. Пора сделать перерыв</string>
    <string name="little_break">маленький перерыв</string>
    <string name="big_break">большой перерыв</string>
    <string name="turn_off">выключить</string>
    <string name="break_finish">Время отдыха закончилось. Пора взяться за работу</string>
    <string name="start_work">начать работать</string>
</resources>