<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainActivity">

    <TextView
        android:id="@+id/permission_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text_permissions"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/permission_overlay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_overlay_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/permission_file_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_file_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/permission_overlay_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>